--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,9 @@
 {
 	"files.associations": {
-		"push_swap.h": "c",
-		"chrono": "c",
-		"random": "c",
-		"limits": "c",
-		"semaphore": "c",
-		"algorithm": "c",
-		"regex": "c",
-		"libft.h": "c"
+		"array": "cpp",
+		"string": "cpp",
+		"string_view": "cpp",
+		"ranges": "cpp",
+		"span": "cpp"
 	}
 }
